# rust-package-building-example

./: .gitignore  Cargo.toml  README.md  mkdocs.yml
.github/workflows/: rust_deb.yml
docs/: index.md
hooks/: pre-commit
src/: main.rs
